# android_translation_layer

./: .gitlab-ci.yml  meson.build
doc/: Architecture.md  Build.md  CodeStyle.md  DBusIntentApi.md  Envs.md
protocol/: meson.build
res/: meson.build
res/framework-res/: AndroidManifest.xml  framework-res.apk  meson.build  remove_unused_resources.py
res/framework-res/res/layout-watch/: preference_widget_switch.xml
res/framework-res/res/values/: arrays.xml  dimens.xml  symbols.xml
res/framework-res/res/values-watch/: themes_device_defaults.xml
res/res/values/: attrs.xml  attrs_manifest.xml  config.xml  public-final.xml  themes.xml  themes_holo.xml  themes_material.xml
res/res/values-watch/: styles.xml
src/: .clang-format
src/api-impl/: build.xml  meson.build
src/api-impl-jni/: android_app_NativeActivity.c  android_content_res_AssetManager.c  android_graphics_Canvas.c  android_graphics_Paint.c  android_inputmethodservice_InputMethodService.c  android_opengl_GLES20.c  android_os_MessageQueue.c  android_os_SystemClock.c  android_util_Log.c  android_view_Window.c  com_google_android_gles_jni_GLImpl.c  defines.h  handle_cache.c  handle_cache.h  native_activity.h  util.c  util.h
src/api-impl-jni/app/: android_app_ATLKeyboardDialog.c  android_app_Activity.c  android_app_Activity.h  android_app_AlertDialog.c  android_app_Dialog.c  android_app_NotificationManager.c  android_app_WallpaperManager.c  android_atl_ATLKeyboardDialog.c
src/api-impl-jni/audio/: android_media_AudioTrack.c  android_media_SoundPool.c
src/api-impl-jni/content/: android_atl_ATLMediaContentProvider.c  android_content_ATLMediaContentProvider.c  android_content_ContentResolver.c  android_content_Context.c  android_content_res_XmlBlock.c
src/api-impl-jni/database/: android_database_SQLiteCommon.c  android_database_SQLiteCommon.h  android_database_SQLiteConnection.c  android_database_SQLiteGlobal.c
src/api-impl-jni/egl/: com_google_android_gles_jni_EGLImpl.c
src/api-impl-jni/generated_headers/: android_app_ATLKeyboardDialog.h  android_app_Activity.h  android_app_Dialog.h  android_app_NativeActivity.h  android_app_NotificationManager.h  android_app_WallpaperManager.h  android_atl_ATLKeyboardDialog.h  android_atl_ATLMediaContentProvider.h  android_atl_GskCanvas.h  android_content_ATLMediaContentProvider.h  android_content_ContentResolver.h  android_content_Context.h  android_content_res_AssetManager.h  android_graphics_Bitmap.h  android_graphics_BlendModeColorFilter.h  android_graphics_Canvas.h  android_graphics_GskCanvas.h  android_graphics_Paint.h  android_graphics_Path.h  android_graphics_Region.h  android_graphics_SweepGradient.h  android_graphics_drawable_NinePatchDrawable.h  android_inputmethodservice_InputMethodService_ATLInputConnection.h  android_media_AudioTrack.h  android_media_MediaPlayer.h  android_os_Parcel.h  android_os_Process.h  android_text_Layout.h  android_view_MotionEvent.h  android_view_View.h  android_view_ViewGroup.h  android_view_ViewTreeObserver.h  android_view_Window.h  android_view_WindowManagerImpl.h  android_widget_AbsListView.h  android_widget_Button.h  android_widget_CheckBox.h  android_widget_CompoundButton.h  android_widget_DatePicker.h  android_widget_EditText.h  (+6 more)
src/api-impl-jni/graphics/: AndroidPaint.h  NinePatchPaintable.c  NinePatchPaintable.h  android_atl_GskCanvas.c  android_graphics_Bitmap.c  android_graphics_Bitmap.h  android_graphics_BitmapFactory.c  android_graphics_GskCanvas.c  android_graphics_Matrix.c  android_graphics_Paint.c  android_graphics_Path.c  android_graphics_drawable_Drawable.c  android_graphics_drawable_NinePatchDrawable.c
src/api-impl-jni/location/: android_location_LocationManager.c
src/api-impl-jni/media/: android_media_MediaCodec.c  android_media_MediaPlayer.c
src/api-impl-jni/os/: android_os_Parcel.c  android_os_Process.c
src/api-impl-jni/sensors/: android_hardware_SensorManager.c
src/api-impl-jni/text/: android_text_Layout.c
src/api-impl-jni/views/: AndroidLayout.c  AndroidLayout.h  android_view_View.c  android_view_ViewGroup.c  android_view_ViewTreeObserver.c  android_view_WindowManagerImpl.c  gdkarrayimpl.c
src/api-impl-jni/widgets/: WrapperWidget.c  WrapperWidget.h  android_view_SurfaceView.c  android_view_SurfaceView.h  android_webkit_WebView.c  android_widget_Button.c  android_widget_CheckBox.c  android_widget_CompoundButton.c  android_widget_DatePicker.c  android_widget_EditText.c  android_widget_ImageButton.c  android_widget_ImageView.c  android_widget_PopupWindow.c  android_widget_RadioButton.c  android_widget_Spinner.c  android_widget_TextView.c  android_widget_TimePicker.c
src/api-impl/android/accounts/: AccountManager.java
src/api-impl/android/animation/: AnimationHandler.java  Animator.java  AnimatorInflater.java  AnimatorSet.java  ArgbEvaluator.java  FloatEvaluator.java  LayoutTransition.java  ObjectAnimator.java  PropertyValuesHolder.java  TypeEvaluator.java  ValueAnimator.java
src/api-impl/android/annotation/: ColorInt.java  FloatRange.java  IntDef.java  IntRange.java  SystemApi.java  UnsupportedAppUsage.java
src/api-impl/android/app/: ATLKeyboardDialog.java  Activity.java  ActivityManager.java  AlarmManager.java  (+29 more)
src/libandroid/: bitmap.c  egl.c  media.c  native_window.c  native_window.h  wayland_server.c  wayland_server.h
src/main-executable/: actions.c  actions.h  atl.gresource.xml  back_button.c  back_button.h  bionic_compat.c  inspector_page.c  inspector_page.h  libc_bio_path_overrides.c  libc_bio_path_overrides.h  main.c
src/main-executable/css/: default-stylesheet.css
src/test-runner/: build.xml  meson.build
src/test-runner/android/test/: ActivityUnitTestCase.java  AndroidTestRunner.java  ComparisonFailure.java  InstrumentationTestCase.java  PerformanceTestCase.java  RenamingDelegatingContext.java
src/test-runner/android/test/suitebuilder/: TestGrouping.java  TestMethod.java
src/test-runner/android/test/suitebuilder/annotation/: HasAnnotation.java
src/test-runner/com/android/internal/util/: Predicates.java
src/test-runner/dalvik/annotation/: BrokenTest.java  SideEffect.java
(+455 files in other folders)
